# twocustomer

./: .env.example  .gitignore  DEPLOY.md  LICENSE  PLAN_V2.md  README.md  START.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
agent/: Dockerfile  bot.py  pyproject.toml  requirements.txt  vercel.json  voice_bot.py  voice_control.py
agent/api/: index.py
agent/app/: __init__.py  config.py  main.py  observability.py
agent/app/channels/: alerts.py  daily.py  deepgram.py  discord.py  slack.py  twilio.py
agent/app/core/: loop.py
agent/app/eval/: fixtures.py  runner.py
agent/app/fde/: _json.py  demo_site.py  github.py  repo_sandbox.py  sandbox.py
agent/app/interview/: fsm.py  synth.py
agent/app/llm/: README.md  base.py  budget.py  claude.py  prompt_twocustomer.md  retry.py  router.py  stub.py
agent/app/monitor/: config.py  dedup.py  insight.py  mention.py  runner.py  scheduler.py  scoring.py  scrapers.py
agent/app/state/: browserbase.py  call_links.py  convex_client.py  crypto.py  (+5 more)
agent/sim/: README.md  agents.py  fake_brand_site.py  run.py  scenarios.py
agent/tests/: conftest.py  test_auth.py  test_budget.py  test_campaign_tool.py  test_claude.py  test_daily.py  test_discord.py  test_discord_context.py  test_edit.py  test_eval.py  test_fde.py  test_github_fde.py  test_handlers.py  test_health.py  test_history.py  test_insight.py  test_interview.py  test_interview_api.py  test_limits.py  test_loop.py  test_memory.py  test_monitor.py  test_monitor_config.py  test_prompt.py  test_propose_fix.py  test_reddit.py  test_redis.py  test_registry.py  test_retry.py  test_runner.py  test_scrapers_news.py  test_sim.py  test_slack.py  test_twilio.py  test_web_search.py
uagent/: agent.py  control_plane.py  intent.py  pyproject.toml
uagent/tests/: test_intent.py
(+151 files in other folders)
