[project]
name = "twocustomer-agent"
version = "0.1.0"
description = "TwoCustomer control plane — Claude agent loop, tools, monitor."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0",
    "pynacl>=1.5",
    "playwright>=1.60.0",
    "defusedxml>=0.7.1",
    "cryptography>=49.0.0",
]

# Local-only processes (Discord gateway bot + Pipecat voice agent). NOT installed
# on Vercel serverless (heavy native deps + not needed by the HTTP control plane).
# Install locally with: uv sync --extra voice
[project.optional-dependencies]
voice = [
    "discord-py>=2.7.1",
    "pipecat-ai[anthropic,daily,deepgram,silero]>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
markers = ["live: hits real Claude (needs funded ANTHROPIC_API_KEY)"]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
