[project]
name = "twocustomer-uagent"
version = "0.1.0"
description = "TwoCustomer Fetch AI uAgent — discoverable + action-taking on ASI:One."
requires-python = ">=3.11"
dependencies = [
    "uagents>=0.22.0",
    "uagents-core>=0.3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
